high cpu usage with many objects #38054

Closed
opened 2014-01-04 02:00:30 +01:00 by Ronny G · 10 comments

System Information
ubuntu 13.10 (64bit) geforce 630gt

Blender Version
Broken: 2.69.7 889d77e
Worked: 2.69

Exact steps for others to reproduce the error****Short description of error
blender uses{F61346}

  1. add ~6000 objects
  2. check cpu usage :)
**System Information** ubuntu 13.10 (64bit) geforce 630gt **Blender Version** Broken: 2.69.7 889d77e Worked: 2.69 **Exact steps for others to reproduce the error****Short description of error** blender uses{[F61346](https://archive.blender.org/developer/F61346/highcpu.blend)} 1. add ~6000 objects 2. check cpu usage :)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Author
[highcpu.blend](https://archive.blender.org/developer/F61356/highcpu.blend)
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Member

Assigning to sergey.

In the attached file, I'm seeing a constant (15-16% CPU load) with 25 threads running.

Specs:

  • Win 8.1 64-bit
  • scons + mingw64 (gcc 4.7) compile of e505203e8d
  • Intel Core i7-4700MQ (quadcore) - 8 threads autodetected
  • Nvidia GeForce 470M

Screenshot of processor usage over 60 seconds after loading the file:
Screenshot_(20).png

Assigning to sergey. In the attached file, I'm seeing a constant (15-16% CPU load) with 25 threads running. Specs: * Win 8.1 64-bit * scons + mingw64 (gcc 4.7) compile of e505203e8de655a7763f67f37f2766c30f0a70f0 * Intel Core i7-4700MQ (quadcore) - 8 threads autodetected * Nvidia GeForce 470M Screenshot of processor usage over 60 seconds after loading the file: ![Screenshot_(20).png](https://archive.blender.org/developer/F61625/Screenshot__20_.png)
Sergey Sharybin was assigned by Joshua Leung 2014-01-04 12:24:42 +01:00
Member

Ack. Trying again to assign to Sergey.

Ack. Trying again to assign to Sergey.

This issue was referenced by blender/blender-addons-contrib@e618d8238e

This issue was referenced by blender/blender-addons-contrib@e618d8238e0e065bdfd2d9332ba7231e870a7e7d

This issue was referenced by e618d8238e

This issue was referenced by e618d8238e0e065bdfd2d9332ba7231e870a7e7d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e618d8238e.

Closed by commit e618d8238e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38054
No description provided.